add pagination, change api endpoint

--- a/src/components/NewsItem/styles.module.css
+++ b/src/components/NewsItem/styles.module.css
@@ -24,6 +24,6 @@
   height: 64px;
   background-color: #f2f4f5;
   background-position: center;
-  block-size: cover;
+  background-size: cover;
   flex-shrink: 0;
 }
